2008-02-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* font.h (enum lgstring_indices, enum lglyph_indices): New enums.
	(LGSTRING_SLOT, LGSTRING_SET_SLOT): New macros.
	* font.c (check_gstring): Use them and AREF to access the vector before
	we know it's really a gstring.
	(Ffont_shape_text): Fix typo.
	(Ffont_shape_text, Ffont_otf_alternates): Fix up int/Lisp_Oject mixups.

	* composite.h (Fcompose_region_internal, Fcompose_string_internal):
	Declare.

	* chartab.c (make_sub_char_table): Remove noop-yet-incorrect statement.

2008-02-05  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (w32font_open_internal): Fill min_width with tmAveCharWidth.
	Set smallest_font_height and smallest_char_width in display info.

2008-02-05  Kenichi Handa  <handa@ni.aist.go.jp>

	* coding.c (decode_eol): Pay attention to coding->dst_multibyte.

2008-02-05  Miles Bader  <miles@gnu.org>

	* xfaces.c (get_lface_attributes, merge_named_face)
	(lookup_named_face, lookup_derived_face, realize_named_face):
	Revert 2008-02-01 change by cyd@stupidchicken.com.

2008-02-04  Kenichi Handa  <handa@ni.aist.go.jp>

	* fontset.c (Ffontset_info): Handle the case of inhibitting the
	fallback fonts.
	(Ffontset_info) [USE_FONT_BACKEND]: Fix getting of opened font names.

2008-02-01  Kenichi Handa  <handa@ni.aist.go.jp>

	* ccl.c (CCL_WRITE_CHAR, CCL_WRITE_MULTIBYTE_CHAR, ccl_driver):
	Cancel previous change.

2008-01-31  Kenichi Handa  <handa@ni.aist.go.jp>

	* ccl.c (CCL_WRITE_CHAR): Increment extra_bytes only when
	ccl->eight_bit_control.  Fix check for buffer overflow.
	(CCL_WRITE_MULTIBYTE_CHAR): Fix check for buffer overflow.
	(ccl_driver): Initialize extra_bytes to 0.

2008-02-04  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (w32font_open_internal): Use font_unparse_fcname to
	set full_name.
	(w32font_open_internal): Use xmalloc, xrealloc, xfree.

2008-02-03  Jason Rumney  <jasonr@gnu.org>

	* makefile.w32-in (OBJ1): Include font.o here.
	(FONTOBJ) [USE_FONTBACKEND]: Instead of here.
