@@ -2800,10 +2800,12 @@ making connections when they don't exist.
 @end defun
 
 @defun unhandled-file-name-directory filename
-This function returns the name of a directory that is not magic.  It
-uses the directory part of @var{filename} if that is not magic.  For a
-magic file name, it invokes the file name handler, which therefore
-decides what value to return.
+This function returns the name of a directory that is not magic.
+It uses the directory part of @var{filename} if that is not magic.
+For a magic file name, it invokes the file name handler, which
+therefore decides what value to return.  If @var{filename} is not
+accessible from a local process, then the file name handler should
+indicate it by returning nil.
 
 This is useful for running a subprocess; every subprocess must have a
 non-magic directory to serve as its current directory, and this function
